replace webpack with gulp

--- a/browser/chat.html
+++ b/browser/chat.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>聊天室</title>
     </head>
-    <script type="text/javascript" src="chat.js"></script>
+    <script type="text/javascript" src="chat.min.js"></script>
     <body>
 
     </body>
