--- a/browser/chat.html
+++ b/browser/chat.html
@@ -4,8 +4,15 @@
         <meta charset="utf-8">
         <title>聊天室</title>
     </head>
-    <script type="text/javascript" src="chat.min.js"></script>
+    <script type="text/javascript" src="./scripts/chat.min.js"></script>
     <body>
-
+        <div class="main">
+            <button type="button" name="button" id="connect">Connect</button>
+            <button type="button" name="button" id="disconnect">Disconnect</button>
+            <p contenteditable="true">
+                test
+            </p>
+            <input id="enter">
+        </div>
     </body>
 </html>
